# article_apply_test_in_jupyter_notebook

./: .gitignore  README.md  notebookApp.ipynb  notebook_replace_query_with_parameter.ipynb  pyproject.toml  testComRefatoracao.py  testSemRefatoracao.py
.ipynb_checkpoints/: notebookApp-checkpoint.ipynb
data/: dataset_mammography.csv  mamografia.csv  update_dataset.ipynb
test/: test_replace_query_with_paramater.py  test_with_refact_replace_query_with_paramater.py  test_without_refact_replace_query_with_paramater.py
